refactor: improve backend API structure